--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "web-vitals": "^2.1.0",
     "yarn": "^1.22.19",
     "react-i18next": "^11.14.3",
-    "i18next":""
+    "i18next":"",
+    "bootstrap":""
   },
   "scripts": {
     "start": "node generate-posts.js && react-scripts start",
