harmonising with new content

--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "bootstrap":""
   },
   "scripts": {
-    "start": "node generate-posts.js && react-scripts start",
-    "build": "node generate-posts.js && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn run build",
