last edit, Giancarlo

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "giocotta",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "/",
   "dependencies": {
     "node-fetch": "^2.6.1",
     "@emailjs/browser": "",
