--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node-fetch": "^2.6.1",
     "@emailjs/browser": "",
     "@googlemaps/js-api-loader": "",
+    "@react-google-maps/api":"",
     "@iconify/icons-mdi": "^1.0.105",
     "@iconify/react": "^4.1.1",
     "@testing-library/jest-dom": "^5.14.1",
@@ -36,7 +37,9 @@
     "i18next":"",
     "bootstrap":"",
     "firebase-admin":"",
-    "busboy": "^0.3.1"
+    "busboy": "^0.3.1",
+    "react-leaflet": "",
+    "leaflet": ""
   },
   "scripts": {
     "start": "react-scripts start",
