--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "firebase-admin":"",
     "busboy": "^0.3.1",
     "react-leaflet": "",
+    "react-geocode": "",
     "leaflet": ""
   },
   "scripts": {
