--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "i18next":"",
     "bootstrap":"",
     "firebase-admin":"",
+    "firebase":"",
     "busboy": "^0.3.1",
     "react-leaflet": "",
     "react-geocode": "",
